--- a/public/css/master.css
+++ b/public/css/master.css
@@ -19,6 +19,27 @@ header {
   box-shadow: 0px 0px 15px 0px rgba(0,0,0,.20);
   z-index: 1;
 }
+
+/* Submenu Js */
+.h-hiperv {
+  position: relative;
+}
+
+.submenu {
+  background: lightgray;
+  font-size: 28px;
+  border-radius: 10px;
+  width: 150px;
+  position: absolute;
+  top: 200%;
+  right: 0%;
+  transform: translateX(0);
+  animation: transform 0.6s ease-in-out;
+}
+
+
+
+/* Fin Submenu Js */
 .cont-head{
   width: 100%;
   display: flex;
@@ -45,6 +66,8 @@ header {
 }
 .h-text{
   padding-right: 10px;
+  display: flex;
+  flex-direction: column;
 }
 .h-categorias{
   display: none;
