--- a/public/css/master.css
+++ b/public/css/master.css
@@ -10,36 +10,15 @@ a, ion-icon, h1{
   color: #3e3a3a;
 }
 header {
-  padding: 0 1em;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   background: white;
   box-shadow: 0px 0px 15px 0px rgba(0,0,0,.20);
   z-index: 1;
 }
 
-/* Submenu Js */
-.h-hiperv {
-  position: relative;
-}
-
-.submenu {
-  background: lightgray;
-  font-size: 28px;
-  border-radius: 10px;
-  width: 150px;
-  position: absolute;
-  top: 200%;
-  right: 0%;
-  transform: translateX(0);
-  animation: transform 0.6s ease-in-out;
-}
-
-
-
-/* Fin Submenu Js */
 .cont-head{
   width: 100%;
   display: flex;
@@ -101,13 +80,11 @@ footer a {
 
 footer {
   background-color: #312C2B;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 40px;
-  padding-left: 40px;
+  padding: 20px 40px;
   width: 100vw !important;
   position: absolute !important;
   left: 0px !important;
+  overflow: hidden;
 }
 
 .bg-cont {
