--- a/public/css/producto.css
+++ b/public/css/producto.css
@@ -7,9 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   flex-direction: column;
-
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
