--- a/public/css/master.css
+++ b/public/css/master.css
@@ -10,10 +10,11 @@ a, ion-icon, h1{
   color: #3e3a3a;
 }
 header {
+  padding: 0 1em;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   background: white;
   box-shadow: 0px 0px 15px 0px rgba(0,0,0,.20);
   z-index: 1;
