--- a/public/css/login.css
+++ b/public/css/login.css
@@ -68,6 +68,7 @@ hr{
   color: #777;
   border: solid 1px #bbb;
   border-radius: 15px;
+  transition: all 0.3s;
 }
 button:hover{
   background-color: #bbb;
