--- a/public/css/master.css
+++ b/public/css/master.css
@@ -21,23 +21,49 @@ header {
 }
 
 /* Submenu Js */
+
 .h-hiperv {
   position: relative;
 }
 
 .submenu {
-  background: lightgray;
-  font-size: 28px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: white;
+  font-size: 20px;
   border-radius: 10px;
-  width: 150px;
+  padding: 10px;
   position: absolute;
-  top: 200%;
+  top: -100px;
   right: 0%;
-  transform: translateX(0);
-  animation: transform 0.6s ease-in-out;
+  opacity: 0;
+  transition: all 0.3s;
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,.20);
+  /* transform: translateX(0);
+  animation: transform 0.6s ease-in-out; */
 }
 
+.h-hiperv:hover .submenu {
+  opacity: 1;
+  transform: translateY(120px);
+}
 
+.logout button{
+  margin-top: 10px;
+  background-color: white;
+  padding: 10px;
+  color: #777;
+  border: solid 1px #bbb;
+  border-radius: 15px;
+  transition: all 0.2s;
+}
+
+.logout button:hover{
+  background-color: #bbb;
+  color: white;
+  cursor: pointer;
+}
 
 /* Fin Submenu Js */
 
