login y regis validations in js

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,6 +5,16 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+.is-invalid {
+  border: solid red 1px !important;
+}
+.is-invalid-fb {
+  color: red;
+}
+.invalid-feedback {
+  display: none;
+  color: red;
+}
 .errores{
   border: 1px dotted #ff5050;
   border-radius: 7px;
