--- a/public/css/master.css
+++ b/public/css/master.css
@@ -273,8 +273,10 @@ footer {
     align-items: center;
   }
   .search{
+    padding-left: 10px;
+    font-size: 14px;
     width: 400px;
-    height: 25px;
+    height: 30px;
     margin: 5px 0;
     background: #ececec;
     border-radius: 10px;
