--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -1,11 +1,192 @@
-body {
-  background: #eecda3;
-  background: -webkit-linear-gradient(to right, rgba(242,87,148,1), rgba(161,64,224,1));
-  background: linear-gradient(0deg, rgba(242,87,148,1) 1%, rgba(161,64,224,1) 100%);
-  min-height: 100vh;
+body{
+  background: #ececec;
 }
-
-#custom {
-  background-color: white;
+main{
+  width: 60%;
+  margin: 4em auto;
+  display: flex;
+  background: white;
   border-radius: 10px;
+}
+.super-cont{
+  width: 98%;
+  display: flex;
+  margin: auto;
+  background: white;
+}
+.cont-a{
+  width: 30%;
+  display: none;
+  line-height: 2em;
+  background: #cacaca;
+  padding: 10px;
+  border-radius: 10px;
+}
+.fil-titu{
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+.fil-delete{
+  display: inline-block;
+  width: max-content;
+  padding: 0 5px;
+  font-size: 14px;
+  border-radius: 5px;
+  background: #ffc8c8;
+  transition: all 0.3s;
+}
+.fil-delete:hover{
+  background: #fff1f1;
+}
+.fil-categoria{
+  display: block;
+  width: 50%;
+  padding: 0 5px;
+  font-size: 14px;
+  border-bottom: 1px solid gainsboro;
+}
+.fil-sec-opt{
+  margin-bottom: 25px;
+}
+.fil-sec-titu{
+  font-weight: 400;
+  font-size: 25px;
+  margin-bottom: 15px;
+}
+.cont-b{
+  width: 100%;
+  min-width: 300px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+.productos {
+  background: white;
+  border-radius: 3px;
+}
+.producto img {
+  width: 120px;
+  margin-right: 5px;
+  border-radius: 5px;
+}
+.producto{
+  margin-bottom: 6px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: solid 1px #ececec;
+}
+.imagen-p{
+  display: inline-block;
+  padding: 0 10px;
+}
+.info-p{
+  width: 100%;
+  display: inline-block;
+  padding: 10px 0;
+}
+.titulo-p{
+  font-size: 14px;
+}
+.opt-p{
+  padding: 10px 0;
+}
+.opt-p ion-icon{
+  color: red;
+}
+.baja{
+  width: 80px;
+  text-align: center;
+  padding: 3px;
+  border-radius: 3px;
+  background: #ffb8b8;
+  color: #6f0000;
+  margin: 0 0 10px 0;
+  transition: all 0.3s;
+  cursor: pointer;
+  font-size: 1em;
+  border: none;
+  height: 28px;
+  outline: none;
+}
+.baja:hover{
+  background: #ffd7d7;
+}
+.editar{
+  width: 80px;
+  text-align: center;
+  padding: 3px;
+  border-radius: 3px;
+  background: #b8bcff;
+  color: #13006f;
+  transition: all 0.3s;
+}
+.editar:hover{
+  background: #dbddff;
+}
+body{
+  font-family: 'Open Sans';
+}
+.opciones{
+  display: flex;
+  justify-content: space-between;
+}
+.opcion{
+  width: 33.15%;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  align-items: center;
+  background: rgb(250,250,250);
+}
+.vista{
+  width: 60px;
+  font-size: 20px;
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.barra {
+  position: relative;
+  bottom: 2px;
+  font-size: 16px;
+  color: #c3c3c3;
+}
+.opt-text{
+  padding-right: 10px;
+  font-size: 14px;
+}
+label{
+  color: gray;
+}
+p {
+  font-size: 0.9em;
+}
+@media (min-width:500px){
+  main{
+    max-width: 600px;
+  }
+  .opcion{
+    width: 33.2%;
+  }
+}
+@media (min-width:1024px) {
+  main{
+    margin-top: 6.5em;
+    max-width: 1200px;
+  }
+  .cont-a{
+    display: block;
+  }
+  .opciones{
+    background: #fafafa;
+  }
+  .opcion{
+    width: 15%;
+  }
+  .opt-filt{
+    display: none;
+  }
 }
