--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,10 +3,11 @@ body {
   background: #e3e3e3;
 }
 
-.container {
+main {
   width: 100%;
-  margin: 0 auto;
-  padding-top: 1em;
+  max-width: 1300px;
+  margin: auto;
+  padding-top: 5em;
 }
 
 .banner {
