--- a/public/css/header2.css
+++ b/public/css/header2.css
@@ -160,23 +160,39 @@ header .hamb{
     }
 }
 
+.menu-mobile .logo-menu{
+    background: #ececec;
+}
 
-.menu-mobile .logo img{
-    width: 150px;
+.menu-mobile .logo-menu img{
+    width: 100px;
 }
 .menu-mobile{
-    border-bottom: solid 1px rgb(66, 66, 66);
+    background: #d2d2d2;
+    color: black;
 }
 .menu-mobile ul{
     padding-inline-start: 0;
 }
 .menu-mobile ul li{
-    text-align: center;
-    margin: 10px auto;
-
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    padding: 10px 0;
+    border-bottom: solid 2px #b1b1b1;
 }
 .user-foto{
     width: 50px;
     height: 50px;
     border-radius: 100%;
+}
+
+.menu-mobile ul li a {
+    color: black;
+    text-decoration: none;
+}
+
+
+.menu-mobile ul li ion-icon {
+    margin-left: 10px;
 }
