--- a/public/css/master.css
+++ b/public/css/master.css
@@ -15,7 +15,8 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  background: white;
+  background: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(8px);
   box-shadow: 0px 0px 15px 0px rgba(0,0,0,.20);
   z-index: 1;
 }
@@ -91,6 +92,10 @@ header {
 .h-top{
   width: 25%;
 }
+.h-logo img{
+  width: 150px;
+}
+
 .h-text{
   padding-right: 10px;
   display: flex;
