--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,108 +1,76 @@
 body {
-  font-family: 'Open Sans';
-  background: #e3e3e3;
+  background: #f3f3f3;;
 }
 
 main {
   width: 100%;
-  max-width: 1300px;
-  margin: auto;
-  padding-top: 5em;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .banner {
-  background: linear-gradient(0deg, rgba(242,87,148,1) 1%, rgba(161,64,224,1) 100%);
+  height: 300px;
+  object-fit: cover;
+  margin: 2em 0;
+  max-width: 100%;
+}
+
+.ofertas{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-flow: row wrap;
+  align-content: flex-start;
   width: 100%;
-  margin: 1.5em 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-height: 300px;
-  margin-top: 1.6em;
-}
-
-.banner-text {
-  width: 45%;
-  color: white;
-  display: flex;
-  flex-direction: column;
-}
-
-.banner-img {
-  width: 45%;
-}
-
-.banner-img img {
-  width: 80%;
-  height: auto;
-}
-.ordenar {
-  width: 120px;
-  margin: 10px;
-  margin-left: 5%;
+  box-sizing: border-box;
+  margin: 0 auto;
   padding: 5px;
-  border: dotted 1px #f0f0f0;
-  border-radius: 10px;
-  background: #ededed;
-}
-.ordenar a{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.productos {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  width: 100%;
-  margin-bottom: 2.5em;
 }
 
 .producto {
-  width: 48%;
-  padding: 8px;
-  margin: 1%;
-  text-align: center;
-  border: solid #d4d4d4 1px;
+  width: 24.1%;
+  height: 300px;
+  box-sizing: border-box;
+  overflow: hidden;
+  margin: 5px;
   background: white;
-  border-radius: 10px;
+  border-radius: 3px;
+  box-shadow: #e8e7e7 0 0 19px 0px;
 }
 
-.imagen-p{
+.producto .imagen{
+  height: 75%;
+  width: 100%;
+  padding: 2px;
+  border-bottom: solid rgb(243, 243, 243) 1px;
+  box-sizing: border-box;
+}
+
+.producto .imagen img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.producto .texto{
+  height: 23%;
   display: flex;
   justify-content: center;
-  margin: 0 10px;
-  overflow: hidden;
+  flex-flow: column;
+
 }
 
-.producto img {
-  height: 175px;
-  margin-right: 5px;
-  border-radius: 5px;
+.producto .texto .precio{
+  margin-left: 15px;
+  font-size: 22px;
+  color: black;
 }
 
-@media (min-width: 768px) {
-  .container{
-    width: 85%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 3em;
-  }
-
-  .producto{
-    width: 23%;
-  }
-
-  .banner {
-    width: 100%;
-    overflow: hidden;
-  }
-
-  .banner-img img {
-    width: 80%;
-    height: auto;
-  }
-
+.producto .texto .titulo{
+  margin-left: 15px;
+  font-size: 17px;
+  color: rgb(63, 63, 63);
 }
