--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,311 +1,258 @@
-/* Este master controla los estilos generales o que se repiten varias veces*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style-type: none;
-  text-decoration: none;
-}
-a, ion-icon, h1{
-  color: #3e3a3a;
-}
-header {
-  padding: 0 1em;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(8px);
-  box-shadow: 0px 0px 15px 0px rgba(0,0,0,.20);
-  z-index: 1;
+body{
+    font-family: 'Segoe UI', 'Open Sans', sans-serif;
 }
 
-/* Submenu Js */
-
-.h-hiperv {
-  position: relative;
+*{
+    margin: 0;
+    list-style: none;
+    text-decoration: none;
 }
 
-.submenu {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  background: white;
-  font-size: 20px;
-  border-radius: 10px;
-  padding: 10px;
-  position: absolute;
-  top: -100px;
-  right: 0%;
-  opacity: 0;
-  transition: all 0.3s;
-  box-shadow: 0px 0px 15px 0px rgba(0,0,0,.20);
-  /* transform: translateX(0);
-  animation: transform 0.6s ease-in-out; */
+header{
+    position: sticky;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgb(247, 247, 247);
+    padding: 10px 25px;
+    box-shadow: rgba(0,0,0,.03) 0px 0px 20px 0px;
 }
 
-.h-hiperv:hover .submenu {
-  opacity: 1;
-  transform: translateY(120px);
+header .logo {
+    height: 60px;
+}
+header .logo img{
+    height: 60px;
 }
 
-.logout button{
-  margin-top: 10px;
-  background-color: white;
-  padding: 10px;
-  color: #777;
-  border: solid 1px #bbb;
-  border-radius: 15px;
-  transition: all 0.2s;
+header .center {
+    display: flex;
+    align-items: center;
+    max-width: 90%;
 }
 
-.logout button:hover{
-  background-color: #bbb;
-  color: white;
-  cursor: pointer;
+header .search-bar {
+    font-size: 18px;
+    width: 350px;
+    height: 50px;
+    margin: 5px 0;
+    background: rgb(243, 243, 243);
+    box-shadow: rgba(0,0,0,.05) 0px 2px 0px 0px;
+    border-radius: 5px;
+    border: 0px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    max-width: 90%;
 }
 
-/* Fin Submenu Js */
-
-.cont-head{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.cont-head-b{
-  display: none;
-}
-.h-bar{
-  display: flex;
-  flex-flow: nowrap;
-  justify-content: flex-end;
-  width: 25%;
-}
-.h-icontext{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding-left: 20px;
-}
-.h-top{
-  width: 25%;
-}
-.h-logo img{
-  width: 150px;
+header .search-boor {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
-.h-text{
-  padding-right: 10px;
-  display: flex;
-  flex-direction: column;
-}
-.h-categorias{
-  display: none;
-}
-.h-busq-sm{
-  display: none;
-}
-
-h1{
-  font-weight: 400;
-}
-.nav-menu {
-  padding: 3px 0;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  font-size: 28px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background: white;
-  box-shadow: 0px 0px 15px 0px rgba(0,0,0,.20);
-  z-index: 10;
+header .search-boor input{
+    padding: 0;
+    padding-left: 15px;
+    border: 0px;
+    font-size: 18px;
+    background: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
 }
 
-footer a {
-  text-decoration: none;
-  color: white;
+header .icono {
+    width: 65px;
+    height: 100%;
+    border-left: solid 1px #cccccc;
+    background: #d2d2d2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
+
+header .icono ion-icon{
+    color: gray;
+    width: 30px;
+}
+
+.categ {
+    margin-right: 7px;
+    padding: 10px 12px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    color: #2b2b2b;
+    background: rgb(243, 243, 243);
+    box-shadow: rgba(0,0,0,.05) 0px 2px 0px 0px;
+}
+
+header .right {
+    display: flex;
+    align-items: center;
+}
+
+header .cart{
+    margin-right: 7px;
+    color: rgb(28, 56, 0);
+}
+
+header .cart, header .user, header .categ{
+    display: flex;
+    align-items: center;
+    border-radius: 3px;
+    padding: 10px 12px;
+    height: 26px;
+    background: rgb(243, 243, 243);
+    box-shadow: rgba(0,0,0,.05) 0px 2px 0px 0px;
+    transition: 0.3s all;
+    border-bottom: solid 2px transparent;
+    border-top: solid 2px transparent;
+    cursor: pointer;
+}
+
+header .cart:hover, header .user:hover, header .categ:hover{
+    border-bottom: solid 2px hotpink;
+}
+
+header p{
+    margin-right: 5px;
+}
+
+header a{
+    text-decoration: none;
+    outline: none;
+    color: black;
+}
+
+header .user img{
+    margin-left: 5px;
+    border: solid 1px rgb(114, 114, 114);
+    width: 25px;
+    height: 25px;
+    border-radius: 100%;
+}
+
+/* Menu hamburguesa */
+
+header .hamb{
+    color: gray;
+    height: 30px;
+    display: none;
+    cursor: pointer;
+}
+
+.hamb-menu{
+    position: fixed;
+    top: 79px;
+    left: 0px;
+    right: 0px;
+    background: #f7f7f7;
+    color: black;
+    display: none;
+}
+
+.hamb-menu ul{
+    padding-inline-start: 0;
+}
+
+.hamb-menu ul li a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0;
+    border-bottom: solid 1px #ececec;
+    color: black;
+    text-decoration: none;
+    transition: all 0.05s;
+}
+
+.hamb-menu .logo-menu{
+    display: none;
+    background: #ececec;
+}
+
+.hamb-menu .logo-menu img{
+    width: 100px;
+}
+
+.hamb-menu .user-foto{
+    width: 27px;
+    height: 27px;
+    border-radius: 100%;
+    margin-left: 10px;
+}
+
+.hamb-menu ul li ion-icon {
+    margin-left: 10px;
+}
+
+.hamb-menu ul li a:focus {
+    outline: none;
+    opacity: 0.7;
+    transform: scale(0.95);
+}
+
+/* Footer */
 
 footer {
-  background-color: #312C2B;
-  padding: 20px 40px;
-  width: 100% !important;
-  position: absolute !important;
-  left: 0px !important;
-  overflow: hidden;
-}
-
-.bg-cont {
-  color: white;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.izq ul li {
-  list-style-type: none;
-  padding-top: 3px;
-}
-.center ul li {
-  list-style-type: none;
-}
-
-.center ion-icon {
-  font-size: 3em;
-  color: white;
-}
-
-.izq {
-  width: 33.33%;
-}
-
-.center {
-  width: 33.33%;
-}
-
-.der {
-  width: 33.33%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.der form {
-  width: auto;
-}
-
-.der button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4CAF50;
-  border: 0;
-  padding: 2px;
-  color: #FFFFFF;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
-}
-
-.der button:hover {
-  background: green;
-}
-
-.copyright {
-  margin-top: 1em;
-  padding-top: 1em;
-  color: white;
-  width: 100%;
-  border-top: solid gray 1px;
-  text-align: center;
-}
-
-@media (max-width: 768px) {
-
-  .bg-cont {
+    background: white;
+    padding: 0 3em 2em 3em;
+    margin-top: 2em;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .izq,.help {
-    width: 100%;
-    text-align: center;
-  }
-
-  .izq h3 {
-    padding-bottom: 1em;
-    font-size: 1.5em;
-  }
-
-  .izq ul li {
-    text-transform: uppercase;
-    font-size: 1em;
-    padding-bottom: 3px;
-  }
-
-  .center {
-    width: 100%;
-    text-align: center;
-  }
-
-  .center h3 {
-    padding-top: 1em;
-    padding-bottom: 1em;
-    font-size: 1.5em;
-  }
-
-  .center ion-icon {
-    font-size: 2em;
-  }
-
-  .der {
-    display: none;
-  }
-
+    justify-content: space-between;
+    color: #424242;
 }
 
-.help{
-  border: 1px solid white;
-  border-radius: 5px;
-  padding: 5px;
-  width: fit-content;
+footer .left{
+    margin-top: 3em;
+}
+footer .left h2{
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+footer .left ul{
+    padding-inline-start: 10px;
 }
 
-@media (max-width:1023px) {
-  .h-bar{
-    display: none;
-  }
-  .h-busq-sm{
-    display: block;
-  }
-  .h-top{
-    width: auto;
-  }
-  footer {
-    padding-bottom: 4em;
-  }
+footer .left ul li{
+    margin-bottom: 5px;
 }
-@media (min-width:1024px) {
-  .cont-head-b{
-    width: 100%;
+
+footer .center{
     display: flex;
-    justify-content: center;
-  }
-  .form-busq{
-    font-size:24px;
-    display: flex;
+    flex-flow: column;
     justify-content: center;
     align-items: center;
-  }
-  .search{
-    padding-left: 10px;
-    font-size: 14px;
-    width: 400px;
-    height: 30px;
-    margin: 5px 0;
-    background: #ececec;
-    border-radius: 10px;
-    border: 0px;
-  }
-  .busq-icon{
-    padding-left: 5px;
-  }
-  .h-categorias{
-    display: flex;
-    flex-flow: wrap;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    margin-right: 10px;
-  }
-  .nav-menu{
-    display: none;
-  }
+    color: gray;
+}
+footer .center img{
+    width: 200px;
+}
+
+
+/* Tablets header */
+@media (max-width:1024px){
+    header .cart, header .user, header .categ{
+        display: none;
+    }
+    header .hamb{
+        display: flex;
+    }
+}
+/* Mobile header */
+@media(max-width:550px){
+    header .logo{
+        display: none;
+    }
+    .hamb-menu .logo-menu{
+        display: block;
+    }
 }
