--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -1,78 +1,68 @@
 body {
-  font-size: 1.2em;
-  font-family: 'Open Sans';
-  background: rgb(242,87,148);
-  background: linear-gradient(0deg, rgba(242,87,148,1) 1%, rgba(161,64,224,1) 100%);
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: #f3f3f3;
 }
 
 main{
-
-  padding-top: 3em;
-  height: 100vh;
+  margin-top: 2em;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 .contact-form{
-  font-size: 16px;
   background: white;
-  border-radius: 10px;
+  border-radius: 3px;
   padding: 10px;
   width: 270px;
-  box-shadow: 2px 2px 10px #777;
+  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0,.1);
 }
-hr{
-  margin: 10px 0;}
+.contact-form hr{
+  margin: 10px 0;
+  width: 100%;
+}
 
 
-h2 {
-  text-align: center;
+.contact-form h2 {
   font-weight: 400;
-  font-size: 1.5em;
+  width: 100%;
 }
 
-input, textarea{
-  border: solid 2px #eee;
+.campo input, textarea{
+  border: solid 1px #eee;
   border-radius: 3px;
   width: 100%;
-  height: 32px;
-  padding: 10px;
-  font-family: 'Open Sans';
-
-}
-textarea {
-min-height: 100px;
-max-height: 100px;
-max-width: 100%;
-min-width: 100%;
+  box-sizing: border-box;
+  padding: 15px;
 
 }
 
-.Boton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .Boton input {
-  padding: 0px;
+  padding: 10px 12px;
+  display: flex;
+  align-items: center;
+  border-radius: 2px;
+  color: #2b2b2b;
+  background: rgb(243, 243, 243);
+  border: none;
+  margin-top: 10px;
 }
-#boton {
-  background-color: black;
-  color: white;
-  border: solid 1px #bbb;
-  border-radius: 15px;
-}
+
 
 #boton:hover{
   cursor: pointer;
 }
-@media (min-width: 500px) {
+@media (min-width: 550px) {
 
 .contact-form{
-    width: 450px;
+    width: 550px;
     padding: 20px;
-  font-size: 1.1em;
+    font-size: 1.1em;
+    display: flex;
+    flex-flow: row wrap;
+    max-width: 90%;
+    box-sizing: border-box;
+  }
+  .campo{
+    width: 50%;
+    box-sizing: border-box;
   }
 }
