--- a/public/css/preguntas.css
+++ b/public/css/preguntas.css
@@ -1,8 +1,5 @@
 body {
-  font-size: 1.2em;
-  font-family: 'Open Sans';
-  background: rgb(242,87,148);
-  background: linear-gradient(0deg, rgba(242,87,148,1) 1%, rgba(161,64,224,1) 100%);
+  background: #f3f3f3;
   background-size: cover;
   background-repeat: no-repeat;
 }
