--- a/public/css/master.css
+++ b/public/css/master.css
@@ -274,6 +274,7 @@ footer .right h3{
     }
     footer{
         flex-flow: wrap;
+        justify-content: space-around;    
     }
 }
 /* Mobile header */
