--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -10,9 +10,9 @@ main{
 .contact-form{
   background: white;
   border-radius: 3px;
-  padding: 10px;
+  padding: 20px;
   width: 270px;
-  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0,.1);
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0,.1);
 }
 .contact-form hr{
   margin: 10px 0;
@@ -25,14 +25,21 @@ main{
   width: 100%;
 }
 
-.campo input, textarea{
+.campo{
+  padding: 5px;
+}
+
+.campo input, .campo textarea{
   border: solid 1px #eee;
   border-radius: 3px;
   width: 100%;
   box-sizing: border-box;
   padding: 15px;
-
+  font-size: inherit;
+  font-family: inherit;
 }
+
+
 
 
 .Boton input {
@@ -44,6 +51,8 @@ main{
   background: rgb(243, 243, 243);
   border: none;
   margin-top: 10px;
+  margin-left: 7px;
+  font-size: inherit;
 }
 
 
@@ -55,7 +64,6 @@ main{
 .contact-form{
     width: 550px;
     padding: 20px;
-    font-size: 1.1em;
     display: flex;
     flex-flow: row wrap;
     max-width: 90%;
@@ -64,5 +72,8 @@ main{
   .campo{
     width: 50%;
     box-sizing: border-box;
+  }
+  .mensaje{
+    width: 100%;
   }
 }
