JS barra de búsqueda iniciado, cambios de estilos

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -42,7 +42,8 @@ header .search-bar {
     width: 350px;
     height: 50px;
     margin: 5px 0;
-    background: rgb(243, 243, 243);
+    background: rgb(251, 251, 251);
+    /* background: rgb(243, 243, 243); este queda tambien */
     box-shadow: rgba(0,0,0,.05) 0px 2px 0px 0px;
     border-radius: 5px;
     border: 0px;
@@ -50,6 +51,7 @@ header .search-bar {
     align-items: center;
     overflow: hidden;
     max-width: 90%;
+    position: relative;
 }
 
 header .search-boor {
@@ -68,13 +70,14 @@ header .search-boor input{
     outline: none;
     width: 100%;
     height: 100%;
+    color: rgb(114, 114, 114);
 }
 
 header .icono {
     width: 65px;
     height: 100%;
-    border-left: solid 1px #cccccc;
-    background: #d2d2d2;
+    background: #ececec;
+    /* #d2d2d2 tambien queda bien*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,6 +87,28 @@ header .icono {
 header .icono ion-icon{
     color: gray;
     width: 30px;
+}
+
+header .center .results{
+    display: block;
+    max-width: 0;
+    max-height: 0;
+    position: absolute;
+    top: 100%;
+    background: white;
+    transition: max-height 400ms ease-in-out;
+}
+
+header .center .results.active{
+    display: block;
+    max-width: 100%;
+    max-height: 600px;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    top: 100%;
+    background: white;
+    transition: max-height 400ms ease-in-out;
 }
 
 .categ {
@@ -114,7 +139,7 @@ header .cart, header .user, header .categ{
     border-radius: 3px;
     padding: 10px 12px;
     height: 26px;
-    background: rgb(243, 243, 243);
+    background: rgb(243, 243, 243); 
     box-shadow: rgba(0,0,0,.05) 0px 2px 0px 0px;
     transition: 0.3s all;
     border-bottom: solid 2px transparent;
@@ -160,7 +185,16 @@ header .hamb{
     right: 0px;
     background: #f7f7f7;
     color: black;
-    display: none;
+    overflow: hidden;
+    display: block;
+    max-height: 0;
+    transition: max-height 400ms ease-in-out;
+}
+
+.hamb-menu.active{
+    display: block;
+    max-height: 1000px;
+    transition: max-height 400ms ease-in-out;
 }
 
 .hamb-menu ul{
@@ -274,7 +308,8 @@ footer .right h3{
     }
     footer{
         flex-flow: wrap;
-        justify-content: space-around;    
+        justify-content: space-around;
+        align-items: center; 
     }
 }
 /* Mobile header */
