--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -1,5 +1,5 @@
 body {
-  background: #f3f3f3;
+  background: linear-gradient(45deg, #fff0fd, transparent);
 }
 
 main{
@@ -9,7 +9,7 @@ main{
 }
 .contact-form{
   background: white;
-  border-radius: 3px;
+  border-radius: 5px;
   padding: 20px;
   width: 270px;
   box-shadow: 0px 2px 15px 0px rgba(0, 0, 0,.1);
@@ -20,9 +20,9 @@ main{
 }
 
 
-.contact-form h2 {
-  font-weight: 400;
-  width: 100%;
+.contact-form h1 {
+  font-weight: 300;
+  margin-left: 7px;
 }
 
 .campo{
@@ -53,6 +53,7 @@ main{
   margin-top: 10px;
   margin-left: 7px;
   font-size: inherit;
+  font-family: inherit;
 }
 
 
