--- a/public/css/master.css
+++ b/public/css/master.css
@@ -56,10 +56,16 @@ header .search-bar {
     border: 0px;
     display: flex;
     align-items: center;
-    overflow: hidden;
     max-width: 90%;
     position: relative;
-    transition: width 200ms ease-in-out;
+    transition: width 200ms ease-in-out, box-shadow 100ms ease-in-out;
+}
+
+header .search-bar.active {
+    width: 450px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    box-shadow: 0 -1px 10px rgba(0,0,0,.1);
 }
 
 header .search-boor {
@@ -102,23 +108,23 @@ header .icono ion-icon{
 header .center .results{
     display: block;
     max-width: 0;
-    max-height: 0;
+    max-height: 0px;
     position: absolute;
     top: 100%;
-    background: white;
+    background: rgb(251, 251, 251);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    overflow: hidden;
     transition: max-height 400ms ease-in-out;
 }
 
 header .center .results.active{
-    display: block;
+    padding: 10px;
     max-width: 100%;
     max-height: 600px;
     width: 100%;
-    height: 100px;
-    position: absolute;
-    top: 100%;
-    background: white;
-    transition: max-height 400ms ease-in-out;
+    box-sizing: border-box;
+    box-shadow: 0 4px 10px rgba(0,0,0,.1);
 }
 
 .categ {
@@ -335,5 +341,11 @@ footer .right h3{
     }
     footer .left{
         flex-flow: column;
+        align-items: center;
+        text-align: center;
+    }
+    footer .left .imagen{
+        padding: 0;
+        padding-bottom: 35px;
     }
 }
