--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,9 +1,5 @@
 body {
-  font-family: 'Open Sans';
-  background: rgb(242,87,148);
-  background: linear-gradient(0deg, rgba(242,87,148,1) 1%, rgba(161,64,224,1) 100%);
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: linear-gradient(45deg, #fff0fd, transparent);
 }
 .is-invalid {
   border: solid red 1px !important;
@@ -25,27 +21,23 @@ body {
   padding: 5px 0;
 }
 main {
-  padding-top: 3em;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .login-form {
-  font-size: 16px;
   background: white;
-  border-radius: 10px;
-  padding: 10px;
+  border-radius: 5px;
+  padding: 20px;
   width: 270px;
-  box-shadow: 2px 2px 10px #777;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0,.1);
 }
 hr{
   margin: 10px 0;
 }
-.container h2 {
+.container h1 {
+  font-weight: 300;
   text-align: center;
-  font-weight: 400;
-  font-size: 1.5em;
 }
 .login-form input {
   border: solid 2px #eee;
@@ -53,7 +45,8 @@ hr{
   width: 100%;
   height: 32px;
   padding: 10px;
-  font-family: 'Open Sans';
+  font-family: inherit;
+  box-sizing: border-box;
 }
 .campo{
   margin: 5px 0;
