--- a/public/css/master.css
+++ b/public/css/master.css
@@ -26,9 +26,10 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgb(247, 247, 247);
+    background: #fffffffa;
     padding: 10px 25px;
     box-shadow: rgba(0,0,0,.03) 0px 0px 20px 0px;
+    border-bottom: 1px solid #e4e4e4;
 }
 
 header .logo {
@@ -144,19 +145,21 @@ header .right {
     align-items: center;
 }
 
-header .cart{
+header .right .cart{
     margin-right: 7px;
     color: rgb(28, 56, 0);
+    background: #6be26f38;
 }
 
 header .cart, header .user, header .categ{
+    font-weight: 300;
     display: flex;
     align-items: center;
     border-radius: 3px;
     padding: 10px 12px;
     height: 26px;
     background: rgb(243, 243, 243); 
-    box-shadow: rgba(0,0,0,.05) 0px 2px 0px 0px;
+    /* box-shadow: rgba(0,0,0,.05) 0px 2px 0px 0px; */
     transition: 0.3s border-bottom;
     border-bottom: solid 2px transparent;
     border-top: solid 2px transparent;
@@ -199,7 +202,7 @@ header .hamb{
     top: 79px;
     left: 0px;
     right: 0px;
-    background: #f7f7f7;
+    background: white;
     color: black;
     overflow: hidden;
     display: block;
@@ -211,6 +214,7 @@ header .hamb{
     display: block;
     max-height: 1000px;
     transition: max-height 400ms ease-in-out;
+    box-shadow: rgb(0,0,0,.1) 0 8px 10px;
 }
 
 .hamb-menu ul{
@@ -222,15 +226,21 @@ header .hamb{
     align-items: center;
     justify-content: center;
     padding: 10px 0;
-    border-bottom: solid 1px #ececec;
+    border-bottom: solid 1px #f3f3f3;
     color: black;
     text-decoration: none;
-    transition: all 0.05s;
+    transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out;
+}
+
+.hamb-menu ul li a:focus {
+    outline: none;
+    opacity: 0.7;
+    transform: scale(0.95);
 }
 
 .hamb-menu .logo-menu{
     display: none;
-    background: #ececec;
+    background: #fbfbfb;
 }
 
 .hamb-menu .logo-menu img{
@@ -248,11 +258,6 @@ header .hamb{
     margin-left: 10px;
 }
 
-.hamb-menu ul li a:focus {
-    outline: none;
-    opacity: 0.7;
-    transform: scale(0.95);
-}
 
 /* Footer */
 
