--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -1,9 +1,5 @@
 body {
-  font-family: 'Open Sans';
-  background: rgb(242,87,148);
-  background: linear-gradient(0deg, rgba(242,87,148,1) 1%, rgba(161,64,224,1) 100%);
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: linear-gradient(45deg, #fff0fd, transparent);
 }
 main {
   margin: 4.5em auto;
@@ -37,12 +33,11 @@ meter[value="2"]::-webkit-meter-optimum-value { background: #ff8b26; }
 meter[value="3"]::-webkit-meter-optimum-value { background: #ffdc52; }
 meter[value="4"]::-webkit-meter-optimum-value { background: #4aed4f; }
 .regis-form {
-  font-size: 16px;
   background: white;
-  border-radius: 10px;
-  padding: 10px;
   width: 300px;
-  box-shadow: 2px 2px 10px #777;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0,.1);
 }
 .errores{
   border: 1px dotted #ff5050;
@@ -56,10 +51,9 @@ meter[value="4"]::-webkit-meter-optimum-value { background: #4aed4f; }
 hr{
   margin: 10px 0;
 }
-h2 {
+h1 {
   text-align: center;
-  font-weight: 400;
-  font-size: 1.5em;
+  font-weight: 300;
 }
 input {
   border: solid 2px #eee;
@@ -67,7 +61,8 @@ input {
   width: 100%;
   height: 32px;
   padding: 10px;
-  font-family: 'Open Sans';
+  font-family: inherit;
+  box-sizing: border-box;
 }
 .campo{
   margin: 5px 0;
